fix(css/top.css): fix text on logo & nav bar offset to the left due to `letter-spacing`
* Apply `text-indent` to compensate the offset introduced by `letter-spacing`

--- a/css/top.css
+++ b/css/top.css
@@ -41,6 +41,7 @@ header.top div.topNav div.headerLeft p {
   color: white;
   margin-bottom: 0;
   letter-spacing: 2px;
+  text-indent: 2px;
 }
 
 header.top div.topNav div.headerRight {
@@ -57,6 +58,7 @@ header.top div.topNav div.headerRight a {
   color: white;
   font-size: 1.35vw;
   letter-spacing: 1px;
+  text-indent: 1px;
   margin-left: 2.54vw;
 }
 
@@ -177,6 +179,7 @@ header.top div.topNav div.navIcon i {
     color: white;
     font-size: 5vw;
     letter-spacing: 2px;
+    text-indent: 2px;
     margin-top: 8vw;
     margin-bottom: 5vw;
     margin-left: 0;
